Add entrypoint script